crates/bitnet-inference/tests/snapshots/snapshot_wave27__profile_report_empty.snap
---
source: crates/bitnet-inference/tests/snapshot_wave27.rs
expression: report
---
{
  "total_time_us": 0.0,
  "per_layer_breakdown": [],
  "bottleneck_layers": [],
  "memory_peak": 0,
  "estimated_flops": 0,
  "memory_snapshots": [],
  "layer_profiles": []
}
