crates/bitnet-inference/tests/snapshots/snapshot_wave27__profiler_config_disabled.snap
---
source: crates/bitnet-inference/tests/snapshot_wave27.rs
expression: cfg
---
{
  "enabled": false,
  "record_memory": false,
  "warmup_iterations": 0,
  "sample_size": 1
}
