crates/bitnet-inference/tests/snapshots/snapshot_wave27__sampling_config_default.snap
---
source: crates/bitnet-inference/tests/snapshot_wave27.rs
expression: cfg
---
{
  "temperature": 0.7,
  "top_k": 50,
  "top_p": 0.9,
  "repetition_penalty": 1.0,
  "seed": null
}
