crates/bitnet-inference/tests/snapshots/snapshot_wave27__sampling_config_greedy.snap
---
source: crates/bitnet-inference/tests/snapshot_wave27.rs
expression: cfg
---
SamplingConfig {
    temperature: 0.0,
    top_k: 1,
    top_p: 1.0,
    repetition_penalty: 1.0,
    seed: Some(
        42,
    ),
}
